# PortScan_Python

./: README.md  pyproject.toml
src/port_scanner/: cli.py  output.py  ports.py  scanner.py  webapp.py
tests/: test_ports.py
